[gd_scene load_steps=4 format=3 uid="uid://dohb7sohljxyf"]

[ext_resource type="Script" path="res://Main/main.gd" id="1_h7k0v"]
[ext_resource type="PackedScene" uid="uid://3mxwiapipt52" path="res://startscreen/start_screen.tscn" id="2_8r8bf"]
[ext_resource type="Script" path="res://Main/world_camera.gd" id="2_ui846"]

[node name="Main" type="Node2D"]
script = ExtResource("1_h7k0v")

[node name="ViewportControl" type="Control" parent="."]
custom_minimum_size = Vector2(1152, 648)
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="WorldViewportContainer" type="SubViewportContainer" parent="ViewportControl"]
layout_mode = 0
offset_right = 512.0
offset_bottom = 512.0

[node name="WorldViewport" type="SubViewport" parent="ViewportControl/WorldViewportContainer"]
handle_input_locally = false
size = Vector2i(1152, 647)
render_target_update_mode = 4

[node name="WorldCamera" type="Camera2D" parent="ViewportControl/WorldViewportContainer/WorldViewport"]
script = ExtResource("2_ui846")

[node name="MultiplayerManager" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Start Screen" parent="." instance=ExtResource("2_8r8bf")]
offset_right = 1153.0
offset_bottom = 655.0
